--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,12 @@
     <string name="pref_tax_key">tax</string>
 
 
+    <!--Strings for SplitCheck Java files-->
+    <!--Strings for CheckDetailActivity.java-->
+    <string name="tab_items">Items</string>
+    <string name="tab_group">Group</string>
+    <string name="tab_modifiers">Modifiers</string>
+
 
     <!--Strings For XML Below-->
     <!--Strings for activity_check_detail.xmlml-->
@@ -52,6 +58,10 @@
     <string name="default_check_item_item_cost">$0.00</string>
 
     <!--String for check_total_item.xml-->
+
+    <!--Strings for fragment_check_detail_participants.xml-->
+    <string name="empty_participants">There is currently no one in your group.
+        Use the button below to add people to your group!</string>
 
 
     <!--Strings for Dialog XML Below-->
